# signingsavvy_flashcards

./: .gitignore  README.md  anki.py  pyproject.toml
src/signingsavvy_anki/: __init__.py  anki.py
