[tool.poetry]
name = "signingsavvy_anki"
version = "0.0.0"
description = "Anki integration for signingsavvy Python package"
authors = ["Brighten Tompkins <brightenqtompkins@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pick = "^1.2.0"
requests = "^2.27.1"
signingsavvy = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
